<resources>
    <string name="app_name">My First App</string>
    <string name="title_text">Your full name test!</string>
    <string name="edit_message2">Last name</string>
    <string name="edit_message">First name</string>
    <string name="button_send">Results</string>
    <string name="result_ssum">Your full name:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="switch_key">Switch</string>
    <string name="Next_wind_key">Both fragments</string>
    <string name="numbers_title">Adder!</string>
    <string name="numbers_first_number">First number</string>
    <string name="numbers_second_number">Second number</string>
    <string name="menu_item0">List activity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_set">Settings</string>
</resources>